worked on the about section layout

--- a/public/idex.html
+++ b/public/idex.html
@@ -152,7 +152,7 @@
                 class="w-full h-32 md:h-48 object-cover"
               />
               <div class="m-3">
-                <span class="font-bold"></span>
+                <span class="font-bold">FRIED CHICKEN</span>
                 <span class="block text-gray-500 text-sm">Price:$20</span>
               </div>
               <div class="badge">
@@ -213,13 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="flex justify-center">
-            <div
-              class="btn bg-sky-100 text-black hover:shadow-inner transform hover:scale-110 hover:bg-opacity-45 transition ease-out duration-200"
-            >
-              load more
-            </div>
-          </div>
+          
         </div>
       </main>
     </div>
@@ -238,79 +232,70 @@
             class="float-right object-cover rounded"
           />
         </div>
-        <div class="ml-4 justify-center items-center">
-          <h2 class="text-gray-600 font-bold uppercase justify-center">
-            cafe leu Dishes
-          </h2>
-          <div class="text-wrap">
-            <p class="text-gray-700 font-semibold">
-              At Café Leu Dishes, we are passionate about crafting delectable
-              culinary experiences that tantalize your taste buds and leave you
-              craving for more. Nestled in the heart of Your Location, our cozy
-              eatery is a haven for food enthusiasts seeking the perfect blend
-              of flavor, quality, and comfort
-            </p>
-          </div>
-          <div class="float-center">
-            <button
-              class="btn bg-red-100 text-black justify-center p-2 mt-2 hover:shadow-inner transform hover:scale-110 hover:bg-opacity-45 transition ease-out duration-200"
-            >
-              Read more
-            </button>
-          </div>
+        <div class="lg:py-24">
+          <h2 class="text-3xl font-bold sm:text-4xl">cafe leu Dishes</h2>
+
+          <p class="mt-4 text-gray-600">
+            At Café Leu Dishes, we are passionate about crafting delectable
+            culinary experiences that tantalize your taste buds and leave you
+            craving for more. Nestled in the heart of Your Location, our cozy
+            eatery is a haven for food enthusiasts seeking the perfect blend of
+            flavor, quality, and comfort
+          </p>
+
+          <a
+            href="#"
+            class="mt-8 inline-block rounded bg-indigo-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-yellow-400"
+          >
+            Read More
+          </a>
         </div>
       </div>
     </div>
-<!--service we offer at cafe leu-->
-<div class="mt-0 bg-gradient-to-r from-gray-50 to-gray-100 ">
-  <div class="text-center font-bold text-3xl uppercase">
-    services we offer at cafe leu
-  </div>
-  <div class="mt-8 border-b border-gray-200 lg:grid grid-cols-3 gap-9">
-    <!--cards for service goes here-->
-    <div
-      class=" bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
-      style="background-image: url(./image/menu-9.jpg)"
-    >
-      <h1 class="font-bold uppercase mt-2 text-center text-2xl">
-        cocktails
-      </h1>
-      <p class="mt-2 p-2">
-        At cafe leu we delignted to offer chicken pizza we our chefs cooks
-        the most delicious chicken
-      </p>
+    <!--service we offer at cafe leu-->
+    <div class="mt-0 bg-gradient-to-r from-gray-50 to-gray-100">
+      <div class="text-center font-bold text-3xl uppercase">
+        services we offer at cafe leu
+      </div>
+      <div class="mt-8 border-b border-gray-200 lg:grid grid-cols-3 gap-9">
+        <!--cards for service goes here-->
+        <div
+          class="bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
+          style="background-image: url(./image/menu-9.jpg)"
+        >
+          <h1 class="font-bold uppercase mt-2 text-center text-2xl">
+            cocktails
+          </h1>
+          <p class="mt-2 p-2">
+            At cafe leu we delignted to offer chicken pizza we our chefs cooks
+            the most delicious chicken
+          </p>
+        </div>
+        <div
+          class="bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
+          style="background-image: url(./image/home-img-3.png)"
+        >
+          <h1 class="font-bold uppercase mt-2 text-center text-2xl">pizzas</h1>
+          <p class="mt-2 p-2">
+            At cafe leu we delignted to offer chicken pizza we our chefs cooks
+            the most delicious chicken
+          </p>
+        </div>
+        <div
+          class="bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
+          style="background-image: url(./image/dish-3.png)"
+        >
+          <h1 class="font-bold uppercase mt-2 text-center text-2xl">
+            fried chicken
+          </h1>
+          <p class="mt-2 p-2">
+            At cafe leu we delignted to offer chicken pizza we our chefs cooks
+            the most delicious chicken
+          </p>
+        </div>
+      </div>
     </div>
-    <div
-      class="bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
-      style="background-image: url(./image/home-img-3.png)"
-    >
-      <h1 class="font-bold uppercase mt-2 text-center text-2xl">
-        pizzas
-      </h1>
-      <p class="mt-2 p-2">
-        At cafe leu we delignted to offer chicken pizza we our chefs cooks
-        the most delicious chicken
-      </p>
-    </div>
-    <div
-      class="bg-white overflow-hidden shadow-md bg-no-repeat bg-cover"
-      style="background-image: url(./image/dish-3.png)"
-    >
-      <h1 class="font-bold uppercase mt-2 text-center text-2xl">
-        fried chicken
-      </h1>
-      <p class="mt-2 p-2">
-        At cafe leu we delignted to offer chicken pizza we our chefs cooks
-        the most delicious chicken
-      </p>
-    </div>
-  </div>
-</div>
 
-
-
-
-   
     <!--testimonal-->
     <div class="bg-white mt-2">
       <div class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 lg:px-8 lg:py-16">
@@ -554,8 +539,6 @@
         </div>
       </div>
     </div>
-
-
 
     <script src="index.js"></script>
   </body>
