--- a/public/idex.html
+++ b/public/idex.html
@@ -616,7 +616,32 @@
         </div>
       </div>
     </div>
+    <!--contact us-->
+    <div class="p-6 dark:text-gray-800 bg-gradient-to-r from-gray-50 to-gray-100">
+      <h4 class="text-center text-4xl font-bold tracking-tight text-gray-400 sm:text-5xl mb-6">let connect for business or any reviews</h4>
+      <form novalidate="" class="container w-full max-w-xl p-8 mx-auto space-y-6 rounded-md shadow dark:bg-gray-50">
+        <h2 class="w-full text-3xl font-bold leading-tight">Contact us</h2>
+        <div>
+          <label for="name" class="block mb-1 ml-1">Name</label>
+          <input id="name" type="text" placeholder="Your name" required="" class="block w-full p-2 rounded focus:outline-none focus:ring focus:ring-opacity-25 focus:dark:ring-violet-600 dark:bg-gray-100">
+        </div>
+        <div>
+          <label for="email" class="block mb-1 ml-1">Email</label>
+          <input id="email" type="email" placeholder="Your email" required="" class="block w-full p-2 rounded focus:outline-none focus:ring focus:ring-opacity-25 focus:dark:ring-violet-600 dark:bg-gray-100">
+        </div>
+        <div>
+          <label for="message" class="block mb-1 ml-1">Message</label>
+          <textarea id="message" type="text" placeholder="Message..." class="block w-full p-2 rounded autoexpand focus:outline-none focus:ring focus:ring-opacity-25 focus:dark:ring-violet-600 dark:bg-gray-100"></textarea>
+        </div>
+        <div>
+          <button type="submit" class="w-full px-4 py-2 font-bold rounded shadow focus:outline-none focus:ring hover:ring focus:ring-opacity-50 dark:bg-violet-600 focus:dark:ring-violet-600 hover:dark:ring-violet-600 dark:text-gray-50">Send</button>
+        </div>
+      </form>
+    </div>
+
+   
 
     <script src="index.js"></script>
+    
   </body>
 </html>
